<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_articulos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="1dp"
        android:padding="0dp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        //inicio contenedor

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity=""
            android:orientation="vertical"
            android:padding="5dp">

            //para DOI

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="DOI:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/doi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="codigo DOI"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:typeface="sans" />
            </LinearLayout>

            /linea
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            //para titulo
            <TextView
                android:id="@+id/titulo_articulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:soundEffectsEnabled="false"
                android:text="TITULO"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imagen_articulo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="centerInside" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/descargarpdf" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/verpdf" />

            </LinearLayout>

            //linea
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            //para palabras clases
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/palabras_claves"
                android:textStyle="bold" />
            //para contenido de P.CLAVES
            <TextView
                android:id="@+id/palabras_claves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:text="CONTENIDO DE PALABRAS CLAVES:" />

            //para AUTORES
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/strautores"
                android:textStyle="bold" />
            //para contenido de AUTORES
            <TextView
                android:id="@+id/autores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:text="CONTENIDO DE AUTORES:" />

            //para RESUMEN
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/strresumen"
                android:textStyle="bold" />
            //para contenido de RESUMEN
            <TextView
                android:id="@+id/resumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:text="CONTENIDO DE RESUMEN:" />



        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>