<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="1dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_revistas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="1dp"
        >

            //inicio contenedor
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:orientation="horizontal"
                android:padding="5dp">

                // inicio del lado izquierdo

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/imagen_isssue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/nombre_revista"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="false"
                        android:scaleType="centerInside" />

                </LinearLayout>

                // inicio del lado derecho

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity=""
                    android:orientation="vertical"
                    android:padding="5dp">

                    //para titulo

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titulo_compuesto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="5dp"
                            android:text="TITULO COMPUESTO"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="16sp"
                            android:textStyle="normal|bold"
                            android:typeface="sans" />

                    </LinearLayout>

                    //para volumen y numero

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/strvolumen"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/volumen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagen_revista"
                            android:layout_gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="test"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:typeface="sans" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/strnumero"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/numero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagen_revista"
                            android:layout_gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="test"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:typeface="sans" />

                    </LinearLayout>

                    //para fecha de publicacion

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/strfecha_publicacion"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fecha_publicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagen_revista"
                            android:layout_gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="test"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:typeface="sans" />
                    </LinearLayout>

                    //para fecha el titulo del perido

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/strperiodo"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/periodo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagen_revista"
                            android:layout_gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="test"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:typeface="sans" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>